fix width jump on screen overflow

--- a/src/markup/pages/books/_style.scss
+++ b/src/markup/pages/books/_style.scss
@@ -1,6 +1,7 @@
 #books {
   margin: 0 auto;
   width: 100%;
+  height: 100vh;
 
   table {
     margin-top: 1.3em;
